src/objects/KS_Intervinientes__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto que registra el tipo de interacción que tiene una cuenta con las ofertas.</description>
    <fields>
        <fullName>KS_Actividad__c</fullName>
        <formula>TEXT(KS_Interviniente__r.KS_Actividad__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actividad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Contacto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.KS_Interviniente__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Intervinientes</relationshipLabel>
        <relationshipName>Intervinientes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Correo_electronico_empresa__c</fullName>
        <formula>KS_Interviniente__r.KS_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correo electrónico empresa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Correo_electronico_personal__c</fullName>
        <formula>KS_Interviniente__r.PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correo electrónico personal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Direccion__c</fullName>
        <formula>IF(KS_Interviniente__r.BillingStreet&lt;&gt;&apos;&apos;, (KS_Interviniente__r.BillingStreet &amp;&quot;, &quot;&amp; KS_Interviniente__r.BillingCity &amp;&quot;, &quot;&amp; KS_Interviniente__r.BillingPostalCode&amp;&quot;,&quot;&amp;  KS_Interviniente__r.BillingState&amp;&quot;,&quot;&amp; KS_Interviniente__r.BillingCountry),
(KS_Interviniente__r.ShippingStreet &amp;&quot;, &quot;&amp; KS_Interviniente__r.ShippingCity &amp;&quot;, &quot;&amp; KS_Interviniente__r.ShippingPostalCode&amp;&quot;,&quot;&amp;  KS_Interviniente__r.ShippingState&amp;&quot;,&quot;&amp; KS_Interviniente__r.ShippingCountry))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirección</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Id_Obra__c</fullName>
        <formula>KS_Obra__r.KS_Id_Obra__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Obra</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Interviniente__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Intervinientes</relationshipLabel>
        <relationshipName>Intervinientes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_NIF__c</fullName>
        <formula>KS_Interviniente__r.KS_CIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NIF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_de_la_cuenta__c</fullName>
        <label>Nombre de la cuenta</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Obra__c</fullName>
        <label>Obra</label>
        <referenceTo>KS_Obra__c</referenceTo>
        <relationshipLabel>Intervinientes</relationshipLabel>
        <relationshipName>Intervinientes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KS_Origen__c</fullName>
        <label>Origen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Origen_Interviniente</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Relacion__c</fullName>
        <label>Relación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Repeticiones__c</fullName>
        <description>Veces que sale el interviniente en las Ofertas</description>
        <inlineHelpText>Veces que sale el interviniente en las Ofertas</inlineHelpText>
        <label>Repeticiones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Telefono__c</fullName>
        <formula>KS_Interviniente__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teléfono</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCIN_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cloud Explorer External ID field used to track IDs between systems.</description>
        <externalId>true</externalId>
        <label>UCIN External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Interviniente</label>
    <nameField>
        <displayFormat>IT-{00000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intervinientes</pluralLabel>
    <recordTypes>
        <fullName>KS_Interviniente_Automatico</fullName>
        <active>true</active>
        <label>Interviniente Automático</label>
    </recordTypes>
    <recordTypes>
        <fullName>KS_Interviniente_Manual</fullName>
        <active>true</active>
        <label>Interviniente Manual</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>